--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.3.0",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "jest": "^26.4.2"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "node-fetch": "^2.6.1"
   }
 }
